# energy-trading-lab

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  MAINTAINERS.md  PRIVACY.md  QUICKSTART.md  README.md  TRANSLATIONS.md  pyproject.toml  requirements.txt  start_backend.py  upload_release.sh
.github/: AGENTS.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
deploy/: .env.example  AGENTS.md  Dockerfile  README.md  docker-compose.yml
docs/: architecture.md  code-review-guidelines.md  evaluation.md  llm-adapters.md  paper-to-code-design.md  references.md  roadmap.md  scenarios-protocol.md  skills-protocol.md  spec.md
docs/i18n/: README.en.md  README.zh-CN.md
examples/: sample_paper.md  theory_draft.md
p2plab/: AGENTS.md  __init__.py  agent.py  api.py  cli.py  code_generator.py  database.py  document_loader.py  eval.py  executor.py  grid.py  llm.py  llm_analysis.py  memory.py  module_validator.py  plugin_loader.py  plugin_manifest.py  project_assembler.py  project_builder.py  rag.py  reporting.py  schemas.py  server.py  simulation.py  utils.py
p2plab/api/: __init__.py  fastapi_server.py  logging.py  workspace.py
p2plab/llm_adapters/: __init__.py  base.py  custom_adapter.py  deepseek_adapter.py  exceptions.py  moonshot_adapter.py  openai_adapter.py  qwen_adapter.py  router.py
tests/: AGENTS.md  test_cli_parity.py  test_core.py  test_llm_adapters.py  test_plugin_manifest.py
web/: AGENTS.md  index.html  package-lock.json  package.json  vite.config.js
web/src/: main.js  (+1 more)
(+34 files in other folders)
